--- a/index.html
+++ b/index.html
@@ -19,45 +19,47 @@
 
   <body>
     <div class="container">
-      <header>
-        <a href="./index.html" class="header-logo">Web<span>Studio</span></a>
-        <nav class="navigation">
-          <ul class="nav-list">
-            <li class="nav-list-item">
-              <a href="./index.html" class="nav-list-item-link">Studio</a>
-            </li>
-            <li class="nav-list-item">
-              <a href="./portfolio.html" class="nav-list-item-link">Portfolio</a>
-            </li>
-            <li class="nav-list-item">
-              <a href="#contacts" class="nav-list-item-link">Contacts</a>
-            </li>
-          </ul>
-        </nav>
+      <header class="page-header">
+        <div class="container">
+          <a href="./index.html" class="header-logo">Web<span>Studio</span></a>
+          <nav class="navigation">
+            <ul class="nav-list">
+              <li class="nav-list-item">
+                <a href="./index.html" class="nav-list-item-link">Studio</a>
+              </li>
+              <li class="nav-list-item">
+                <a href="./portfolio.html" class="nav-list-item-link">Portfolio</a>
+              </li>
+              <li class="nav-list-item">
+                <a href="#contacts" class="nav-list-item-link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
 
-        <address class="contacts">
-          <ul class="contacts-list">
-            <li class="contacts-list-item">
-              <a href="mailto:info@devstudio.com" class="contacts-list-item-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="contacts-list-item">
-              <a href="tel:+110001111111" class="contacts-list-item-link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+          <address class="contacts">
+            <ul class="contacts-list">
+              <li class="contacts-list-item">
+                <a href="mailto:info@devstudio.com" class="contacts-list-item-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts-list-item">
+                <a href="tel:+110001111111" class="contacts-list-item-link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </header>
       <main>
-        <section class="hero">
-          <h1 class="hero-header main-header">
+        <section class="hero section">
+          <h1 class="hero-header">
             Effective Solutions for Your Business
           </h1>
           <button type="button" class="hero-button">Order Service</button>
         </section>
-        <section class="advantages">
+        <section class="advantages section">
           <h2 class="section-header visually-hidden">Our advantages</h2>
           <ul class="content-list">
             <li class="content-list-item">
@@ -90,7 +92,7 @@
             </li>
           </ul>
         </section>
-        <section class="features">
+        <section class="features section">
           <h2 class="section-header">What are we doing</h2>
           <ul class="content-list">
             <li class="content-list-item">
@@ -119,7 +121,7 @@
             </li>
           </ul>
         </section>
-        <section class="team">
+        <section class="team section">
           <h2 class="section-header">Our Team</h2>
           <ul class="content-list">
             <li class="content-list-item team-card">
@@ -165,7 +167,7 @@
           </ul>
         </section>
       </main>
-      <footer>
+      <footer class="page-footer">
         <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital
