Add container div to all page sections in body, adjust paddings, center contents.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   </head>
 
   <body>
-    <div class="container">
-      <header class="page-header">
+      <header class="page-header section">
         <div class="container">
           <a href="./index.html" class="header-logo">Web<span>Studio</span></a>
           <nav class="navigation">
@@ -54,125 +53,135 @@
       </header>
       <main>
         <section class="hero section">
-          <h1 class="hero-header">
-            Effective Solutions for Your Business
-          </h1>
-          <button type="button" class="hero-button">Order Service</button>
+          <div class="container">
+            <h1 class="hero-header">
+              Effective Solutions for Your Business
+            </h1>
+            <button type="button" class="hero-button">Order Service</button>
+          </div>
         </section>
         <section class="advantages section">
-          <h2 class="section-header visually-hidden">Our advantages</h2>
-          <ul class="content-list">
-            <li class="content-list-item">
-              <h3 class="content-list-item-header">Strategy</h3>
-              <p class="content-list-item-text">
-                Our goal is to identify the business problem to walk away with the
-                perfect and creative solution.
-              </p>
-            </li>
-            <li class="content-list-item">
-              <h3 class="content-list-item-header">Punctuality</h3>
-              <p class="content-list-item-text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="content-list-item">
-              <h3 class="content-list-item-header">Diligence</h3>
-              <p class="content-list-item-text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="content-list-item">
-              <h3 class="content-list-item-header">Technologies</h3>
-              <p class="content-list-item-text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="section-header visually-hidden">Our advantages</h2>
+            <ul class="content-list">
+              <li class="content-list-item">
+                <h3 class="content-list-item-header">Strategy</h3>
+                <p class="content-list-item-text">
+                  Our goal is to identify the business problem to walk away with the
+                  perfect and creative solution.
+                </p>
+              </li>
+              <li class="content-list-item">
+                <h3 class="content-list-item-header">Punctuality</h3>
+                <p class="content-list-item-text">
+                  Bring the key message to the brand's audience for the best price
+                  within the shortest possible time.
+                </p>
+              </li>
+              <li class="content-list-item">
+                <h3 class="content-list-item-header">Diligence</h3>
+                <p class="content-list-item-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li class="content-list-item">
+                <h3 class="content-list-item-header">Technologies</h3>
+                <p class="content-list-item-text">
+                  Design practice focused on digital experiences. We bring forth a
+                  deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
         </section>
         <section class="features section">
-          <h2 class="section-header">What are we doing</h2>
-          <ul class="content-list">
-            <li class="content-list-item">
-              <img
-                src="images/index/section-2/feature-1.jpg"
-                alt="feature-1"
-                width="360"
-                height="300"
-              />
-            </li>
-            <li class="content-list-item">
-              <img
-                src="images/index/section-2/feature-2.jpg"
-                alt="feature-2"
-                width="360"
-                height="300"
-              />
-            </li>
-            <li class="content-list-item">
-              <img
-                src="images/index/section-2/feature-3.jpg"
-                alt="feature-3"
-                width="360"
-                height="300"
-              />
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="section-header">What are we doing</h2>
+            <ul class="content-list">
+              <li class="content-list-item">
+                <img
+                  src="images/index/section-2/feature-1.jpg"
+                  alt="feature-1"
+                  width="360"
+                  height="300"
+                />
+              </li>
+              <li class="content-list-item">
+                <img
+                  src="images/index/section-2/feature-2.jpg"
+                  alt="feature-2"
+                  width="360"
+                  height="300"
+                />
+              </li>
+              <li class="content-list-item">
+                <img
+                  src="images/index/section-2/feature-3.jpg"
+                  alt="feature-3"
+                  width="360"
+                  height="300"
+                />
+              </li>
+            </ul>
+          </div>
         </section>
         <section class="team section">
-          <h2 class="section-header">Our Team</h2>
-          <ul class="content-list">
-            <li class="content-list-item team-card">
-              <img
-                src="images/index/section-3/card-1.jpg"
-                alt="Mark Guerrero Photo"
-                width="264"
-                height="260"
-              />
-              <h3 class="content-list-item-header">Mark Guerrero</h3>
-              <p class="content-list-item-text">Product Designer</p>
-            </li>
-            <li class="content-list-item team-card">
-              <img
-                src="images/index/section-3/card-2.jpg"
-                alt="Tom Ford Photo"
-                width="264"
-                height="260"
-              />
-              <h3 class="content-list-item-header">Tom Ford</h3>
-              <p class="content-list-item-text">Frontend Developer</p>
-            </li>
-            <li class="content-list-item team-card">
-              <img
-                src="images/index/section-3/card-3.jpg"
-                alt="Camila Garcia Photo"
-                width="264"
-                height="260"
-              />
-              <h3 class="content-list-item-header">Camila Garcia</h3>
-              <p class="content-list-item-text">Marketing</p>
-            </li>
-            <li class="content-list-item team-card">
-              <img
-                src="images/index/section-3/card-4.jpg"
-                alt="Daniel Wilson Photo"
-                width="264"
-                height="260"
-              />
-              <h3 class="content-list-item-header">Daniel Wilson</h3>
-              <p class="content-list-item-text">UI Designer</p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="section-header">Our Team</h2>
+            <ul class="content-list">
+              <li class="content-list-item team-card">
+                <img
+                  src="images/index/section-3/card-1.jpg"
+                  alt="Mark Guerrero Photo"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="content-list-item-header">Mark Guerrero</h3>
+                <p class="content-list-item-text">Product Designer</p>
+              </li>
+              <li class="content-list-item team-card">
+                <img
+                  src="images/index/section-3/card-2.jpg"
+                  alt="Tom Ford Photo"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="content-list-item-header">Tom Ford</h3>
+                <p class="content-list-item-text">Frontend Developer</p>
+              </li>
+              <li class="content-list-item team-card">
+                <img
+                  src="images/index/section-3/card-3.jpg"
+                  alt="Camila Garcia Photo"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="content-list-item-header">Camila Garcia</h3>
+                <p class="content-list-item-text">Marketing</p>
+              </li>
+              <li class="content-list-item team-card">
+                <img
+                  src="images/index/section-3/card-4.jpg"
+                  alt="Daniel Wilson Photo"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="content-list-item-header">Daniel Wilson</h3>
+                <p class="content-list-item-text">UI Designer</p>
+              </li>
+            </ul>
+          </div>
         </section>
       </main>
-      <footer class="page-footer">
-        <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
+      <footer class="page-footer section">
+        <div class="container">
+          <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.
+          </p>
+        </div>
       </footer>
     </div>
   </body>
