--- a/portfolio.html
+++ b/portfolio.html
@@ -18,42 +18,42 @@
   </head>
 
   <body>
-    <div class="container">
-      <header class="page-header">
-        <div class="container">
-          <a href="./index.html" class="header-logo">Web<span>Studio</span></a>
-          <nav class="navigation">
-            <ul class="nav-list">
-              <li class="nav-list-item">
-                <a href="./index.html" class="nav-list-item-link">Studio</a>
-              </li>
-              <li class="nav-list-item">
-                <a href="./portfolio.html" class="nav-list-item-link">Portfolio</a>
-              </li>
-              <li class="nav-list-item">
-                <a href="#contacts" class="nav-list-item-link">Contacts</a>
-              </li>
-            </ul>
-          </nav>
+    <header class="page-header section">
+      <div class="container">
+        <a href="./index.html" class="header-logo">Web<span>Studio</span></a>
+        <nav class="navigation">
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a href="./index.html" class="nav-list-item-link">Studio</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="./portfolio.html" class="nav-list-item-link">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="#contacts" class="nav-list-item-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-          <address class="contacts">
-            <ul class="contacts-list">
-              <li class="contacts-list-item">
-                <a href="mailto:info@devstudio.com" class="contacts-list-item-link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="contacts-list-item">
-                <a href="tel:+110001111111" class="contacts-list-item-link"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
-      </header>
-      <main>
-        <section class="portfolio-content section">
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-list-item">
+              <a href="mailto:info@devstudio.com" class="contacts-list-item-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-list-item">
+              <a href="tel:+110001111111" class="contacts-list-item-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </header>
+    <main>
+      <section class="portfolio-content section">
+        <div class="container">
           <h1 class="portfolio-content-header visually-hidden">Our Projects</h1>
           <ul class="controls-list">
             <li class="controls-list-item">
@@ -216,15 +216,17 @@
               </a>
             </li>
           </ul>
-        </section>
-      </main>
-      <footer class="page-footer">
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer section">
+      <div class="container">
         <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital
           marketing & growth solutions.
         </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
