Change border for portfolio cards and description paddings

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,10 +111,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="content-list-item-header">
-                  Banking App Interface Concept
-                </h2>
-                <p class="content-list-item-text">App</p>
+                <div class="portfolio-card-description">
+                  <h2 class="content-list-item-header">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="content-list-item-text">App</p>
+                </div>
               </a>
             </li>
             <li class="content-list-item portfolio-card">
@@ -125,8 +127,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="content-list-item-header">Cashless Payment</h2>
-                <p class="content-list-item-text">Marketing</p>
+                <div class="portfolio-card-description">
+                  <h2 class="content-list-item-header">Cashless Payment</h2>
+                  <p class="content-list-item-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="content-list-item portfolio-card">
@@ -137,8 +141,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="content-list-item-header">Meditation App</h2>
-                <p class="content-list-item-text">App</p>
+                <div class="portfolio-card-description">
+                  <h2 class="content-list-item-header">Meditation App</h2>
+                  <p class="content-list-item-text">App</p>
+                </div>
               </a>
             </li>
             <li class="content-list-item portfolio-card">
@@ -149,8 +155,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="content-list-item-header">Taxi Service</h2>
-                <p class="content-list-item-text">Marketing</p>
+                <div class="portfolio-card-description">
+                  <h2 class="content-list-item-header">Taxi Service</h2>
+                  <p class="content-list-item-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="content-list-item portfolio-card">
@@ -161,8 +169,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="content-list-item-header">Screen Illustrations</h2>
-                <p class="content-list-item-text">Design</p>
+                <div class="portfolio-card-description">
+                  <h2 class="content-list-item-header">Screen Illustrations</h2>
+                  <p class="content-list-item-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="content-list-item portfolio-card">
@@ -173,8 +183,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="content-list-item-header">Online Courses</h2>
-                <p class="content-list-item-text">Marketing</p>
+                <div class="portfolio-card-description">
+                  <h2 class="content-list-item-header">Online Courses</h2>
+                  <p class="content-list-item-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="content-list-item portfolio-card">
@@ -185,10 +197,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="content-list-item-header">
-                  Instagram Stories Concept
-                </h2>
-                <p class="content-list-item-text">Design</p>
+                <div class="portfolio-card-description">
+                  <h2 class="content-list-item-header">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="content-list-item-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="content-list-item portfolio-card">
@@ -199,8 +213,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="content-list-item-header">Organic Food</h2>
-                <p class="content-list-item-text">Web Site</p>
+                <div class="portfolio-card-description">
+                  <h2 class="content-list-item-header">Organic Food</h2>
+                  <p class="content-list-item-text">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="content-list-item portfolio-card">
@@ -211,8 +227,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="content-list-item-header">Fresh Coffee</h2>
-                <p class="content-list-item-text">Web Site</p>
+                <div class="portfolio-card-description">
+                  <h2 class="content-list-item-header">Fresh Coffee</h2>
+                  <p class="content-list-item-text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
