Fix according to mentor's comments

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <header class="page-header section">
+    <header class="page-header">
       <div class="container">
         <a href="./index.html" class="header-logo">Web<span>Studio</span></a>
         <nav class="navigation">
@@ -52,7 +52,7 @@
       </div>
     </header>
     <main>
-      <section class="portfolio-content section">
+      <section class="portfolio-content">
         <div class="container">
           <h1 class="portfolio-content-header visually-hidden">Our Projects</h1>
           <ul class="controls-list">
@@ -237,7 +237,7 @@
         </div>
       </section>
     </main>
-    <footer class="page-footer section">
+    <footer class="page-footer">
       <div class="container">
         <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
         <p class="footer-text">
