--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-      <header class="page-header section">
+      <header class="page-header">
         <div class="container">
           <a href="./index.html" class="header-logo">Web<span>Studio</span></a>
           <nav class="navigation">
@@ -52,7 +52,7 @@
         </div>
       </header>
       <main>
-        <section class="hero section">
+        <section class="hero">
           <div class="container">
             <h1 class="hero-header">
               Effective Solutions for Your Business
@@ -60,7 +60,7 @@
             <button type="button" class="hero-button">Order Service</button>
           </div>
         </section>
-        <section class="advantages section">
+        <section class="advantages">
           <div class="container">
             <h2 class="section-header visually-hidden">Our advantages</h2>
             <ul class="content-list">
@@ -95,7 +95,7 @@
             </ul>
           </div>
         </section>
-        <section class="features section">
+        <section class="features">
           <div class="container">
             <h2 class="section-header">What are we doing</h2>
             <ul class="content-list">
@@ -126,7 +126,7 @@
             </ul>
           </div>
         </section>
-        <section class="team section">
+        <section class="team">
           <div class="container">
             <h2 class="section-header">Our Team</h2>
             <ul class="content-list">
@@ -137,8 +137,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="content-list-item-header">Mark Guerrero</h3>
-                <p class="content-list-item-text">Product Designer</p>
+                <div class="team-card-description">
+                  <h3 class="content-list-item-header">Mark Guerrero</h3>
+                  <p class="content-list-item-text">Product Designer</p>
+                </div>
               </li>
               <li class="content-list-item team-card">
                 <img
@@ -147,8 +149,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="content-list-item-header">Tom Ford</h3>
-                <p class="content-list-item-text">Frontend Developer</p>
+                <div class="team-card-description">
+                  <h3 class="content-list-item-header">Tom Ford</h3>
+                  <p class="content-list-item-text">Frontend Developer</p>
+                </div>
               </li>
               <li class="content-list-item team-card">
                 <img
@@ -157,8 +161,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="content-list-item-header">Camila Garcia</h3>
-                <p class="content-list-item-text">Marketing</p>
+                <div class="team-card-description">
+                  <h3 class="content-list-item-header">Camila Garcia</h3>
+                  <p class="content-list-item-text">Marketing</p>
+                </div>
               </li>
               <li class="content-list-item team-card">
                 <img
@@ -167,14 +173,16 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="content-list-item-header">Daniel Wilson</h3>
-                <p class="content-list-item-text">UI Designer</p>
+                <div class="team-card-description">
+                  <h3 class="content-list-item-header">Daniel Wilson</h3>
+                  <p class="content-list-item-text">UI Designer</p>
+                </div>
               </li>
             </ul>
           </div>
         </section>
       </main>
-      <footer class="page-footer section">
+      <footer class="page-footer">
         <div class="container">
           <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
           <p class="footer-text">
